[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bshsolutions-sdk"
version = "0.0.1"
description = "Python SDK for integrating with BSH Engine <https://engine.bousalih.com>"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bousalih Hamza", email = "hamza.bousalih.com"}
]
keywords = ["bsh-solutions", "bsh-engine", "sdk", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[project.urls]
Homepage = "https://engine.bousalih.com"
Repository = "https://github.com/bshgenerator/bshengine.sdk.py"
Documentation = "https://docs.bousalih.com/docs/bsh-engine/sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["bshengine*"]

